@@ -1,0 +1,16 @@
+title = Welcome to Smarty!
+
+overwrite = Overwrite1
+overwrite = Overwrite2
+
+# Here is an error
+
+[section1]]
+sec1 = Hello Section1
+
+[section2]
+sec2 = 'Hello Section2'
+
+[.hidden]
+hiddentext = Hidden Section
+
