@@ -28,9 +28,6 @@
 * @author Uwe Tews
 * @package Smarty
 * @version 3.0-alpha1
-* @todo  get_registered_object methode
-* @todo  get_template_vars methode
-* @todo  trigger_error methode
 */
 
 /**
